--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/README.md          export-ignore
+.gitattributes       export-ignore
+.gitignore           export-ignore
+README.md            export-ignore
+images/              export-ignore
