--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 .gitattributes       export-ignore
 .gitignore           export-ignore
+LICENSE              export-ignore
+README.md            export-ignore
 images/              export-ignore
